# arkalia-quest

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .render-buildignore  .renderignore  .zshrc-quest  404.html  AMELIORATIONS_CONTINUITE.md  AMELIORATIONS_FUTURES.md  AMELIORATIONS_GAMIFICATION.md  ANALYSE_COMPLETE_PROJET.md  CHANGELOG.md  CONTRIBUTION_SETUP_COMPLETE.md  Dockerfile  GAMEPLAY_ENHANCEMENTS_SUMMARY.md  GUIDE_DEMO_VIDEO.md  GUIDE_GITHUB_DEPLOIEMENT.md  GUIDE_TEST_ULTRA_ATTRACTIF.md  LICENSE  Makefile  PLAN_REBELLE_ARKALIA.md  POPUP_MANAGEMENT_SOLUTION.md  RAPPORT_AMELIORATIONS_ULTRA_ATTRACTIVES.md  RAPPORT_ANALYSE_FINALE.json  RAPPORT_AUDIT_COMPLET_PROJET.md  RAPPORT_AUDIT_GLOBAL_COMPLET.md  RAPPORT_CORRECTIONS_FINAL.md  RAPPORT_CORRECTIONS_FINALES.md  RAPPORT_DEMO_COMPLET.md  RAPPORT_FINAL_COMPLET.md  RAPPORT_RUFF_CORRECTION.md  README.md  README_FINAL.md  README_UTILISATION.md  RECYCLAGE_AMELIORATIONS.md  RESUME_ACCOMPLISHMENTS.md  RESUME_AMELIORATIONS.md  RESUME_ANALYSE_TESTS_ADO.md  RESUME_FINAL_ACCOMPLISHMENTS.md  (+65 more)
.github/: pull_request_template.md  settings.yml
.zsh_sessions/: 103FB728-70CF-4779-80DF-55401698F42D.history  103FB728-70CF-4779-80DF-55401698F42D.session
AMELIORATIONS_UX_TUTORIEL/: index.html
ARCHITECTURE/: index.html
ARCHITECTURE_TECHNIQUE/: index.html
CHANGELOG/: index.html
CHANGELOG_DOCUMENTATION/: index.html
CHECKLISTS_TEST_UTILISATEUR/: index.html
CONTRIBUTING/: index.html
CONTRIBUTION_SETUP_COMPLETE/: index.html
CORRECTIONS_SKILL_TREE/: index.html
CSS_JS_BUNDLES/: index.html
DEPLOYMENT_GUIDE/: index.html
DOCKER_AUTH/: index.html
EVALUATION_STRATEGIQUE/: index.html
GITHUB_CONTRIBUTION_SETUP/: index.html
GUIDE_DEPLOIEMENT/: index.html
GUIDE_DEVELOPPEMENT/: index.html
GUIDE_TECHNIQUE_DEVELOPPEUR/: index.html
GUIDE_TESTEUR_RAPIDE/: index.html
GUIDE_TEST_UTILISATEUR/: index.html
INDEX_DOCUMENTATION/: index.html
README_UTILISATION/: index.html
RELEASE_CHECKLIST_v3.1.1/: index.html
ROADMAP/: index.html
ROADMAP_STRATEGIQUE/: index.html
STATUT_PROJET_ACTUEL/: index.html
SYSTÈME_ANALYTICS_DATA_DRIVEN/: index.html
TEST_PLAN_UTILISATEUR/: index.html
VISION/: index.html
artifacts/: audit_complet_jeu.json  audit_visuel_nettoyage.json  bandit-report.json
assets/: index.html
audits/: index.html
config/: .coveragerc  Dockerfile  Procfile  __init__.py  app.json  cloudbuild.yaml  config.example.py  deployment.py  dev_tools.py  digitalocean.yaml  docker-compose.yml  load_test_config.json  monitoring_config.json  nginx.conf  platforms.md  pytest.ini  railway.json  render.yaml  security.json  settings.py  test_config.py
core/: __init__.py  adaptive_storytelling.py  advanced_achievements.py  analytics_engine.py  ark_logger.py  cache_manager.py  category_leaderboards.py  command_handler.py  command_handler_v2.py  customization_engine.py  daily_challenges_engine.py  database.py  database_optimizer.py  educational_games_engine.py  enhanced_mission_system.py  game_engine.py  gamification_engine.py  luna_emotions_engine.py  micro_interactions.py  mission_handler.py  mission_progress_tracker.py  mission_unified.py  narrative_branches.py  performance_optimizer.py  profile_manager.py  progression_engine.py  secondary_missions.py  security_enhanced.py  security_manager.py  security_unified.py  social_engine.py  story_engine.py  story_save.py  technical_tutorials.py  tutorial_manager.py  websocket_manager.py
data/: achievements.json  advanced_achievements.json  avatars.json  badges.json  badges_secrets.json  boss_final_ascii.json  category_leaderboards.json  chapitre_6_luna_compromise.json  daily_challenges.json  dark_help.txt  defis_sociaux.json  dialogues_dynamiques.json  enhanced_missions.json  evaluations.json  guilds.json  leaderboard.json  learning_data.json  mission_progress.json  narrative_branches.json  personality_data.json  player_choices.json  player_customizations.json  player_journals.json  progression.json  story.json  story_chapters.json  technical_tutorials.json  tutoriel_interactif.json  user_preferences.json
docs/: AMELIORATIONS_UX_TUTORIEL.md  ANALYSE_ET_AMELIORATIONS_JEU.md  ARCHITECTURE.md  ARCHITECTURE_TECHNIQUE.md  AUDIT_ET_REVISION_CONCEPT.md  AUDIT_VISUEL_ET_PERFORMANCES.md  CHANGELOG.md  CHANGELOG_DOCUMENTATION.md  CHECKLISTS_TEST_UTILISATEUR.md  CHEMIN_NULL_VERS_SUPER.md  COMPARAISON_JEUX_SOURCES_EXTERNES.md  CONTRIBUTING.md  CONTRIBUTION_SETUP_COMPLETE.md  CORRECTIONS_SKILL_TREE.md  CSS_JS_BUNDLES.md  DEPLOYMENT_GUIDE.md  DOCKER_AUTH.md  DOCUMENTATION_COMPLETE.md  EVALUATION_STRATEGIQUE.md  FAQ.md  GITHUB_CONTRIBUTION_SETUP.md  GUIDE_DEPLOIEMENT.md  GUIDE_DEPLOIEMENT_COMPLET.md  GUIDE_DEVELOPPEMENT.md  GUIDE_TECHNIQUE_DEVELOPPEUR.md  GUIDE_TESTEUR_RAPIDE.md  GUIDE_TEST_UTILISATEUR.md  GUIDE_UTILISATEUR_COMPLET.md  INDEX_DOCUMENTATION.md  PLAYTEST_GUIDE_ADOS.md  POINT_PROJET_2026.md  README.md  README_UTILISATION.md  REFONTE_VISUELLE_2026.md  RELEASE_CHECKLIST_v3.1.1.md  REPARTIR_SUR_DES_BASES_SANES.md  ROADMAP.md  ROADMAP_STRATEGIQUE.md  STATUT_PROJET_ACTUEL.md  SYSTÈME_ANALYTICS_DATA_DRIVEN.md  (+5 more)
engines/: __init__.py  effects_engine.py  luna_ai.py  luna_ai_v2.py  luna_ai_v3.py
improvements/: index.html
k8s/: k8s-deployment.yaml  k8s-service.yaml
mission_utils/: assistant_pirate.py  meme_engine.py  mission_engine.py  oracle_engine.py  personality_engine.py
missions/: cyber_escape.json  intro.json  niveau1.json  niveau2.json  niveau2_decoder.json  niveau3.json  niveau4.json  niveau5.json
rapports/: index.html
reports/: PLAN_AMELIORATION_TESTS_ADO.md  RAPPORT_FINAL_CI.md  RAPPORT_FINAL_COMPLET.md  RAPPORT_FINAL_CORRECTION.md  RAPPORT_FINAL_CORRECTION_MANUEL.md  RAPPORT_FINAL_ULTIME.md  RAPPORT_FINAL_ULTIME_CORRIGE.md  RAPPORT_FINAL_ULTIME_PARFAIT.md  RAPPORT_OPTIMISATION_PERFORMANCE.md  RAPPORT_RUFF_CORRECTION.md  RESUME_ANALYSE_TESTS_ADO.md  RESUME_FINAL_UX.md  STATUT_UX_TUTORIEL.md  index.html  rapport_analyse_tests_ado_20250817_155651.json  repo_audit.md
routes/: __init__.py  api.py  pages.py  story.py
scripts/: audit_complet_jeu.py  build_package.sh  (+28 more)
(+644 files in other folders)
